--- a/Android/Indoor/app/build.gradle
+++ b/Android/Indoor/app/build.gradle
@@ -25,7 +25,7 @@ repositories{
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.orhanobut:logger:1.11'
     compile 'com.indooratlas.android:indooratlas-android-sdk:2.1.2@aar'
     compile 'com.anthonycr.grant:permissions:1.0'
+    compile files('src/main/java/lib/LightHouseAPI.jar')
 }
