--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,11 @@ GroupReport/GroupReport.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
-
+*.pcapng
+Simulator/scenario7400
+Simulator/scenario74000
+Simulator/scenario740000
+Simulator/kalmanScenario
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
