--- a/Simulator/Runner/.classpath
+++ b/Simulator/Runner/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="/Users/johannth/Downloads/LightHouseAPI.jar"/>
 	<classpathentry kind="lib" path="/Users/johannth/Downloads/commons-math3-3.6.1/commons-math3-3.6.1.jar" sourcepath="/Users/johannth/Downloads/commons-math3-3.6.1/commons-math3-3.6.1-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/johannth/Downloads/xchart-3.2.0/xchart-3.2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/johannth/Downloads/guava-19.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
