Added goal test to the report and changed the topic interaction for the simulation runner.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ Simulator/scenario74000
 Simulator/scenario740000
 Simulator/kalmanScenario
 Simulator/backAndForthScenarion100SamplingRate
+Simulator/distanceTest
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
